Public comment dev

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -3669,9 +3669,14 @@ section.project-info {
 		font-weight: bold;
 	}
 	
+	h4 {
+		margin-top: 1rem;
+		font-weight: bold;
+	}
+	
 	p {
-		margin-bottom: 0;
-		line-height: 2.2rem;
+		margin: 1.5rem 0;
+		line-height: 2rem;
 	}
 	
 	.list-group,
