Public Comment interface development

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -3699,6 +3699,12 @@ section.project-info {
 		}
 	}
 	
+	.comment-info {
+		p {
+			margin: 0;
+		}
+	}
+	
 	.eao-comment-notes {
 		label,
 		.value {
