--- a/modules/project-comments/client/views/public-comments/detail.html
+++ b/modules/project-comments/client/views/public-comments/detail.html
@@ -6,24 +6,26 @@
     <h3 ng-if="::!comment.isAnonymous" class="modal-title">Public Comment  &nbsp;&rsaquo;&nbsp; {{ ::comment.author }}</h3>
 </div>
 <div class="modal-body">
-<!-- <div>
-<input type="checkbox" ng-model="isPublic">Public</input><br/>
-<input type="checkbox" ng-model="isEao">EAO</input><br/>
-<input type="checkbox" ng-model="isProponent">Proponent</input>
-</div>
- -->
- 	<section class="eao-alerts" ng-if="isEao">
-        <div class="alert alert-info eao-comment-notes " ng-if="comment.eaoNotes">
-
-            <!--  NOTES -->
+    
+    <!-- <div>
+    <input type="checkbox" ng-model="isPublic">Public</input><br/>
+    <input type="checkbox" ng-model="isEao">EAO</input><br/>
+    <input type="checkbox" ng-model="isProponent">Proponent</input>
+    </div>
+    -->
+    
+    <!-- COMMENT NOTE ALERTS -->
+ 	<section class="eao-alerts hidden" ng-if="isEao">
+       
+       <!-- DEFERRAL NOTES -->
+       <div class="alert alert-info eao-comment-notes " ng-if="comment.eaoNotes">
             <div class="row" ng-if="comment.eaoStatus === 'Deferred'">
                 <span class="col-sm-12 value wrap-text">{{comment.eaoNotes}}</span>
             </div>
-            <!--  / NOTES -->
-        </div>
-
+        </div><!-- / DEFERRAL NOTES -->
+        
+        <!-- REJECTION NOTES -->
         <div class="alert alert-danger eao-comment-notes " ng-if="comment.rejectedReason || comment.rejectedNotes">
-	        <!-- REJECTION NOTES -->
             <div class="row">
                 <label>Rejected</label>
             </div>
@@ -33,18 +35,18 @@
             <div class="row">
                 <span class="col-sm-12 value wrap-text">{{ comment.rejectedNotes }}</span>
             </div>
-            <!-- / REJECTION NOTES -->
-        </div>
-    </section>
+        </div><!-- / REJECTION NOTES -->
+        
+    </section><!-- / COMMENT NOTE ALERTS -->
 
-
+    <!-- COMMENT INFO -->
     <section class="comment-info">
         <label class="control-label">Posted {{comment.dateAdded | date}}</label>
         <p class="value wrap-text">{{ ::comment.comment }}</p>
-    </section>
+    </section><!-- / COMMENT INFO -->
 
+	<!-- ASSIGN PILLARS & VC'S -->    
     <section class="pillers-vc" ng-if="isProponent">
-	   <!-- PILLARS & VC'S -->
     	<button
     		x-vc-chooser
     		x-project="project"
@@ -55,10 +57,10 @@
     	>
     	Assign Valued Components
     	</button>
-    </section>
+    </section><!-- / ASSIGN PILLARS & VC'S -->
 
-    <section>
-	    <!-- PILLARS / VALUED COMPONENTS -->
+	<!-- PILLARS & VC'S -->
+    <section ng-if="isPublic || isEao">
         <div class="detail-row">
             <label>Pillars</label>
             <span class="value">{{ comment.pillars.join (', &nbsp;') }}</span>
@@ -67,7 +69,7 @@
             <label>Valued Components</label>
             <span class="value">{{ comment.topics.join (', &nbsp;') }}</span>
         </div>
-    </section>
+    </section><!-- / PILLARS & VC'S -->
 
     <!-- ATTACHMENTS -->
     <section ng-if="isPublic || isProponent">
@@ -88,7 +90,7 @@
         </div>
     </section><!-- / ATTACHMENTS -->
 
-    <!-- ATTACHMENTS -->
+    <!-- UPLOAD ATTACHMENTS -->
     <section ng-if="isEao">
         <label class="control-label">Attachments</label>
         <ul class="attachments list-group">
@@ -135,45 +137,40 @@
                 </button>
             </li>
         </ul>
-    </section><!-- / ATTACHMENTS -->
+    </section><!-- / UPLOAD ATTACHMENTS -->
 
     <!-- SET COMMENT STATUS -->
-    <section ng-if="isEao">
-        <label class="control-label">Set Comment Status</label>
-        <ul class="comment-status-btns nav nav-pills" role="pills">
-
-
-            <!-- NEED TO SET ACTIVE CLASS WHEN CLICKED -->
-            <li role="presentation"><button class="btn btn-default" role="pill" data-toggle="pill" ng-click="comment.eaoStatus='Deferred'" ng-class="{'active':comment.eaoStatus === 'Deferred'}">Defer</button></li>
-            <li role="presentation"><button class="btn btn-default" role="pill" data-toggle="pill" ng-click="comment.eaoStatus='Rejected'" ng-class="{'active':comment.eaoStatus === 'Rejected'}">Reject</button></li>
-            <li role="presentation"><button class="btn btn-default" role="pill" data-toggle="pill" ng-click="comment.eaoStatus='Published'" ng-class="{'active':comment.eaoStatus === 'Published'}">Publish</button></li>
-
-            <!-- OLD FUNCTIONALITY - TO BE REMOVED -->
-            <div class="hidden">
-                <label class="btn btn-default">
-                    <input type="radio" ng-model="comment.eaoStatus" value="Deferred" name="commentStatus" id="deferComment" > Defer
-                </label>
-                <label class="btn btn-danger">
-                    <input type="radio" ng-model="comment.eaoStatus" value="Rejected" name="commentStatus" id="rejectComment" > Reject
-                </label>
-                <label class="btn btn-success">
-                    <input type="radio" ng-model="comment.eaoStatus" value="Published" name="commentStatus" id="publishComment" > Publish
-                </label>
-            </div><!-- OLD FUNCTIONALITY - TO BE REMOVED -->
-        </ul>
-
-        <div class="row">
-            <label>Notes</label>
-            <textarea ng-model="comment.eaoNotes"></textarea>
+    <section ng-if="isEao">       
+        <div class="form-group">
+            <label class="control-label">Set Comment Status</label>
+            <ul class="comment-status-btns nav nav-pills" role="pills">
+                <li role="presentation">
+                    <button class="btn btn-default" role="pill" data-toggle="pill" ng-click="comment.eaoStatus='Deferred'" ng-class="{'active':comment.eaoStatus === 'Deferred'}">Defer</button>
+                </li>
+                <li role="presentation">
+                    <button class="btn btn-default" role="pill" data-toggle="pill" ng-click="comment.eaoStatus='Rejected'" ng-class="{'active':comment.eaoStatus === 'Rejected'}">Reject</button>
+                </li>
+                <li role="presentation">
+                    <button class="btn btn-default" role="pill" data-toggle="pill" ng-click="comment.eaoStatus='Published'" ng-class="{'active':comment.eaoStatus === 'Published'}">Publish</button>
+                </li>
+            </ul>
         </div>
-
-        <div class="row" ng-if="comment.eaoStatus === 'Rejected'">
-            <label>Rejection Reason</label>
-            <input type="text" ng-model="comment.rejectedReason"></input>
-            <label>Rejection Notes</label>
-            <textarea ng-model="comment.rejectedNotes"></textarea>
+        <div class="comment-deferral-note" ng-if="comment.eaoStatus === 'Deferred'">
+            <div class="form-group">
+                <label class="control-label">Reason for Deferring Comment<em>Required</em></label>
+                <textarea class="form-control" ng-model="comment.eaoNotes"></textarea>
+            </div>
         </div>
-
+        <div class="comment-rejection-note" ng-if="comment.eaoStatus === 'Rejected'">
+            <div class="form-group">
+                <label class="control-label">Reason for Rejecting Comment<em>Required</em></label>
+                <input class="form-control" type="text" ng-model="comment.rejectedReason"></input>
+            </div>
+            <div class="form-group">
+                <label class="control-label">Notes<em>Required</em></label>
+                <textarea class="form-control" ng-model="comment.rejectedNotes"></textarea>
+            </div>
+        </div>
     </section><!-- / SET COMMENT STATUS -->
 
 </div>
