arg. an attempt to force a view failed

--- a/modules/project-comments/client/views/public-comments/list.html
+++ b/modules/project-comments/client/views/public-comments/list.html
@@ -87,3 +87,10 @@
             </div>
     <!-- / EAO ROW TEMPLATES  -->
 </div>
+<div>
+<input type="checkbox" ng-model="s.isPublic">Public</input><br/>
+<input type="checkbox" ng-model="s.isEao">EAO</input><br/>
+<input type="checkbox" ng-model="s.isProponent">Proponent</input>
+</div>
+
+
