--- a/modules/project-comments/client/views/public-comments/detail.html
+++ b/modules/project-comments/client/views/public-comments/detail.html
@@ -43,7 +43,7 @@
         <p class="value wrap-text">{{ ::comment.comment }}</p>
     </section>
 
-    <section class="pillers-vc" ng-if="isProponent">
+    <section class="pillers-vc" ng-if="isProponent || isEao">
 	   <!-- PILLARS & VC'S -->
     	<button
     		x-vc-chooser
