--- a/modules/project-comments/client/views/public-comments/list.html
+++ b/modules/project-comments/client/views/public-comments/list.html
@@ -87,10 +87,10 @@
             </div>
     <!-- / EAO ROW TEMPLATES  -->
 </div>
-<div>
+<!-- <div>
 <input type="checkbox" ng-model="s.isPublic">Public</input><br/>
 <input type="checkbox" ng-model="s.isEao">EAO</input><br/>
 <input type="checkbox" ng-model="s.isProponent">Proponent</input>
 </div>
-
+ -->
 
