make pillars and things visible if they exist

--- a/modules/project-comments/client/views/public-comments/detail.html
+++ b/modules/project-comments/client/views/public-comments/detail.html
@@ -6,16 +6,16 @@
     <h3 ng-if="::!comment.isAnonymous" class="modal-title">Public Comment  &nbsp;&rsaquo;&nbsp; {{ ::comment.author }}</h3>
 </div>
 <div class="modal-body">
-    
+
     <div>
         <input type="checkbox" ng-model="isPublic">Public</input><br/>
         <input type="checkbox" ng-model="isEao">EAO</input><br/>
         <input type="checkbox" ng-model="isProponent">Proponent</input>
     </div>
-    
+
     <!-- COMMENT NOTE ALERTS -->
  	<div class="eao-alerts" ng-if="isEao">
-       
+
         <!-- DEFERRAL NOTES -->
         <div class="alert alert-info eao-comment-notes" ng-if="comment.eaoStatus === 'Deferred' && comment.eaoNotes">
             <div class="detail-row horiz">
@@ -23,7 +23,7 @@
                 <span class="value wrap-text">{{comment.eaoNotes}}</span>
             </div>
         </div><!-- / DEFERRAL NOTES -->
-        
+
         <!-- REJECTION NOTES -->
         <div class="alert alert-danger eao-comment-notes" ng-if="comment.eaoStatus === 'Rejected'">
             <div class="detail-row" ng-if="comment.rejectedReason">
@@ -35,7 +35,7 @@
                 <span class="value wrap-text">{{ comment.rejectedNotes }}</span>
             </div>
         </div><!-- / REJECTION NOTES -->
-        
+
     </div><!-- / COMMENT NOTE ALERTS -->
 
     <!-- COMMENT INFO -->
@@ -44,7 +44,7 @@
         <p class="value wrap-text">{{ ::comment.comment }}</p>
     </section><!-- / COMMENT INFO -->
 
-	<!-- ASSIGN PILLARS & VC'S -->    
+	<!-- ASSIGN PILLARS & VC'S -->
     <section class="pillers-vc" ng-if="isProponent">
     	<button
     		x-vc-chooser
@@ -58,7 +58,7 @@
     </section><!-- / ASSIGN PILLARS & VC'S -->
 
 	<!-- PILLARS & VC'S -->
-    <section ng-if="isPublic">
+    <section ng-if="comment.pillars.length > 0">
         <div class="detail-row">
             <label>Pillars</label>
             <span class="value">{{ comment.pillars.join (', &nbsp;') }}</span>
@@ -138,7 +138,7 @@
     </section><!-- / REVIEW ATTACHMENTS -->
 
     <!-- SET COMMENT STATUS -->
-    <section class="comment-status" ng-if="isEao">       
+    <section class="comment-status" ng-if="isEao">
         <div class="form-group">
             <label class="control-label">Set Comment Status</label>
             <div class="comment-status-btns btn-group">
